fIXED INVSEE ISSUES + FIXED ITEMS LOASS ON SERVER OFF STATE